# XJTU-RM-Task02-opencv-project-lin

./: CMakeLists.txt  README.md  compile_commands.json  main.cpp
